test/parser/template/114.hac
// "114.hac"
// copy-modified from "113.hac"
// expect fail

template <><pint M, N, d[M][N]; preal D>
defproc foo(chan?() Cin; chan!() Cout; chan!(int) R) { }

// error: wrong number of relaxed parameters
foo<><2,7> A;

// @haco-flags@ -f case-collision=ignore
